Add testimonials from mhairi

--- a/testimonials.html
+++ b/testimonials.html
@@ -85,22 +85,19 @@
     <!-- intro section -->
     <section class="services-intro testimonial-intro">
         <h2 class="about-detail-title sect-title intro-title">
-            So you're ready for a breakthrough, a change to your everyday life.
+            So you're ready for a breakthrough?
         </h2>
         <h3 class="services-intro-subtitle rob-font">
             You are not alone!
         </h3>
-        <div class="intro-text">
+        <div class="intro-text testimonial-intro-text">
             <p class="normal-text">
-                Think champagne toasts, beach side chats, actionable business advice, and sisters for life.
-                 Mixed up heirloom echo park. . Mixed up heirloom echo park. oke iPhone portland slow-carb 
-                 messenger bag.woke iPhone portland slow-carb messenger bag small batch austin everyday carry 
-                 bicycle rights. YThink champagne toasts, beach side chats, actionable business advice, and 
-                 sisters for life. Mixed up heirloom echo park. . Mixed up heirloom echo park. oke iPhone 
-                 portland slow-carb messenger bag.woke iPhone portland slow-carb messenger bag small batch 
-                 austin everyday carry bicycle rights. Mixed up heirloom echo park. oke iPhone portland slow-carb 
-                 messenger bag.woke iPhone portland slow-carb messenger bag small batch austin everyday carry 
-                 bicycle rights.&nbsp;
+                I became a coach in order to make, in my own small way, a positive  difference in the world. 
+                I’ve been lucky enough to work with many incredible clients over the years and watch them thrive. 
+                
+            </p>
+            <p class="sect-subtitle">
+                Here a few of their wonderful voices.
             </p>
         </div>
         
@@ -116,7 +113,7 @@
         <div class="testimonial-item">
             <div class="testimonial-author">
                 <h2 class="logo-font testimonial-author-name">
-                    Chris Cicchinelli
+                    Natalia McHale
                 </h2>
                 <h3 class="rob-font testimonial-author-job">
                     President and CEO of pure performance
@@ -124,18 +121,14 @@
             </div>
             <div class="testimonial-exert">
                 <p>
-                    “She cares deeply about your progress, encourages you to stretch. put my priorities in order,
-                    release stress, set achievable goals. ”
+                    “Revolutionary, Motivating and empowering. An absolutely life changing delight.”
                 </p>
             </div>
             <div class="testimonial-main">
                 <p class="normal-text">
-                    Andrea's keynote at our World Conference was truly impactful. There was no holding back which made her 
-                    relate to our audience, as well as teach them practical tools they can take back to their business as well
-                    as their personal lives to make them more successful. Her stories were both poignant and entertaining– I 
-                    loved watching the whole room laugh within the first five minutes of her talk. I appreciate that she took
-                    the time to understand the culture of our company, as well as meet with every person afterward who wanted
-                    to personally speak with her.
+                    Words can’t quite describe how happy I am. After a few sessions, my nearest and dearest saw an almost physical change in me, radiating more positivity and embracing challenges.
+                    I’ve felt myself become a stronger and more assured person, feeling more confident in my choices and behaviour.
+
                 </p>
             </div>
         </div>
@@ -143,25 +136,20 @@
         <div class="testimonial-item">
             <div class="testimonial-author">
                 <h2 class="logo-font testimonial-author-name">
-                    Guy McGregor
+                    Kate Towes
                 </h2>
                 <h3 class="rob-font testimonial-author-job">
-                    Portfolio manager at Electric Avenue 
+                    Customer experoence Team lead
                 </h3>
             </div>
             <div class="testimonial-exert">
                 <p>
-                    “Poutine four dollar toast poke deep v. Farm-to-table flannel schlitz, squid semiotics beard iPhone synth raw deni. ”
+                    “Mhairi really helped in gaining more confidence….If I ever feel overwhelmed I just go back to my sessions with Mhairi ”
                 </p>
             </div>
             <div class="testimonial-main">
                 <p class="normal-text">
-                    Lyft blue bottle tofu neutra organic subway tile taiyaki slow-carb, helvetica distillery hexagon
-                     salvia. Pinterest occupy tote bag plaid vegan vape kickstarter tacos af taiyaki DIY thundercats banh mi.
-                      Health goth organic twee authentic. Direct trade pug everyday carry cred tumeric scenester neutra 
-                      williamsburg normcore vinyl live-edge kombucha PBR&B marfa. Lyft blue bottle tofu neutra organic subway 
-                      tile taiyaki slow-carb, helvetica distillery hexagon salvia. Pinterest occupy tote bag plaid vegan vape 
-                      kickstarter tacos af taiyaki DIY thundercats banh mi. 
+                    Mhairi really helped me in gaining more confidence in my work environment. I struggled with prioritising and Mhairi coached me in ways I could do this that suited my style. I loved how she asked me questions that enabled me to think of the answer for myself. I had never had coaching sessions before so it was completely new to me. Mhairi was a great coach and made my first experience really enjoyable and interesting. She’s definitely helped how I think about things and I feel more able to manage my workload. If I ever feel overwhelmed I just go back to my sessions with Mhairi and remember what I’ve learnt.
                 </p>
             </div>
         </div>
@@ -169,7 +157,7 @@
         <div class="testimonial-item">
             <div class="testimonial-author">
                 <h2 class="logo-font testimonial-author-name">
-                    Anne Mackenzie
+                    Jo Christie
                 </h2>
                 <h3 class="rob-font testimonial-author-job">
                     Head of digital at Coconuts
@@ -177,17 +165,12 @@
             </div>
             <div class="testimonial-exert">
                 <p>
-                    “Poutine four dollar toast poke deep v. Farm-to-table flannel schlitz, squid semiotics beard iPhone synth raw deni. ”
+                    “Mhairi was hugely inspirational and made me realise I can do anything I set my mind on ”
                 </p>
             </div>
             <div class="testimonial-main">
                 <p class="normal-text">
-                    Lyft blue bottle tofu neutra organic subway tile taiyaki slow-carb, helvetica distillery hexagon
-                     salvia. Pinterest occupy tote bag plaid vegan vape kickstarter tacos af taiyaki DIY thundercats banh mi.
-                      Health goth organic twee authentic. Direct trade pug everyday carry cred tumeric scenester neutra 
-                      williamsburg normcore vinyl live-edge kombucha PBR&B marfa. Lyft blue bottle tofu neutra organic subway 
-                      tile taiyaki slow-carb, helvetica distillery hexagon salvia. Pinterest occupy tote bag plaid vegan vape 
-                      kickstarter tacos af taiyaki DIY thundercats banh mi. 
+                    Mhairi has made me think very differently and realize there are ways around obstacles. I was constantly telling myself I couldn’t do things… I was so busy being busy. I decided to give up smoking and although I had a few mishaps I’m quite proud of my 41 days smoke free.  Mhairi was hugely inspirational and made me realise I can do anything I set my mind on.
                 </p>
             </div>
         </div>
@@ -195,7 +178,7 @@
         <div class="testimonial-item">
             <div class="testimonial-author">
                 <h2 class="logo-font testimonial-author-name">
-                    Orla Hunter
+                    Darren Searle
                 </h2>
                 <h3 class="rob-font testimonial-author-job">
                     Founder and head chef at Montana's Cookhouse
@@ -203,17 +186,33 @@
             </div>
             <div class="testimonial-exert">
                 <p>
-                    “Poutine four dollar toast poke deep v. Farm-to-table flannel schlitz, squid semiotics beard iPhone synth raw deni. ”
+                    “The experience of having a coach...made me a more confident and happy person. Amazing! ”
                 </p>
             </div>
             <div class="testimonial-main">
                 <p class="normal-text">
-                    Lyft blue bottle tofu neutra organic subway tile taiyaki slow-carb, helvetica distillery hexagon
-                     salvia. Pinterest occupy tote bag plaid vegan vape kickstarter tacos af taiyaki DIY thundercats banh mi.
-                      Health goth organic twee authentic. Direct trade pug everyday carry cred tumeric scenester neutra 
-                      williamsburg normcore vinyl live-edge kombucha PBR&B marfa. Lyft blue bottle tofu neutra organic subway 
-                      tile taiyaki slow-carb, helvetica distillery hexagon salvia. Pinterest occupy tote bag plaid vegan vape 
-                      kickstarter tacos af taiyaki DIY thundercats banh mi. 
+                    The experience of having a coach really made me reflect on the positive aspects of my life and not the negative. It gave me goals and made me look at things in such a different light which in the end made me a more confident and happy person and this has continued even after the coaching sessions ended. Amazing!!
+                </p>
+            </div>
+        </div>
+        <hr class="half-width-hr">
+        <div class="testimonial-item">
+            <div class="testimonial-author">
+                <h2 class="logo-font testimonial-author-name">
+                    Katya Vanbrich
+                </h2>
+                <h3 class="rob-font testimonial-author-job">
+                    Founder and head chef at Montana's Cookhouse
+                </h3>
+            </div>
+            <div class="testimonial-exert">
+                <p>
+                    “I have gone from not knowing how I could progress….to having a clear vision and direction ”
+                </p>
+            </div>
+            <div class="testimonial-main">
+                <p class="normal-text">
+                    Mhairi encouraged me to ask myself questions that I wouldn’t have otherwise considered. She gave me new perspective on what I am capable of which I now use in my day to day work life to achieve my goals. I have gone from not knowing how I could progress in my career, to having a clear vision and direction of how to get there.
                 </p>
             </div>
         </div>
