Adjsut services page margins

--- a/services.html
+++ b/services.html
@@ -250,6 +250,11 @@
                     <h2 class="sect-title signature-title">
                         Swift
                     </h2>
+                    <p class="normal-text coaching-package-intro">
+                        I'm baby deep v lumbersexual viral skateboard. Scenester mlkshk drinking vinegar tumblr, 
+                        distillery tilde hot chicken VHS. Pug hell of blue bottle, la croix salvia heirloom banh 
+                        mi hexagon bitters trust fund. Prism offal poutine austin,
+                    </p>
                     <figure class="includes-fig">
                         <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
                         <ul class="includes-list">
@@ -276,11 +281,17 @@
                     <a class="" href="">I'm ready for this.</a>
                 </div>    
             </div>
+            <hr class="half-width-hr d-md-none">
             <div class="coaching-package-item">
                 <div class="signature-includes">
                     <h2 class="sect-title signature-title">
                         signature
                     </h2>
+                    <p class="normal-text coaching-package-intro">
+                        Hammock lo-fi truffaut brunch snackwave organic. Bitters flannel PBR&B, 
+                        sriracha franzen banjo truffaut bicycle rights whatever pinterest deep v typewriter. 
+                        Gochujang lyft man braid pour-over, flannel dreamcatcher craft
+                    </p>
                     <figure class="includes-fig">
                         <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
                         <ul class="includes-list">
@@ -311,11 +322,17 @@
                     <a class="" href="">I'm ready for this.</a>
                 </div>    
             </div>
+            <hr class="half-width-hr d-md-none">
             <div class="coaching-package-item">
                 <div class="signature-includes">
                     <h2 class="sect-title signature-title">
                         Shift
                     </h2>
+                    <p class="normal-text coaching-package-intro">
+                        Readymade food truck pickled unicorn green juice. Ethical migas echo park keytar.
+                         Unicorn health goth pabst tilde kinfolk gluten-free. Everyday carry air plant wayfarers 
+                         chillwave leggings shoreditch. Marfa tousled organic,
+                    </p>
                     <figure class="includes-fig">
                         <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
                         <ul class="includes-list">
