Adjust margins on about page

--- a/about.html
+++ b/about.html
@@ -111,12 +111,14 @@
                 </p> -->
             </div>
         </div>
-        <p class="about-detail-quote">
-            So, that’s a nice story, but how does that help you? 
-            Well, we are similar you and I.  I know you are talented and don’t recognize how powerful that is, I know you lack true self-confidence and I know you’re not as happy in your life as you could be.
+        <div class="about-detail-quote">
+            <p class="logo-3">So, that’s a nice story, but how does that help you? </p>
+            <p class="normal-text">
+                Well, we are similar you and I.  I know you are talented and don’t recognize how powerful that is, I know you lack true self-confidence and I know you’re not as happy in your life as you could be.
+            </p>
             <br>
-            <br>I also know that I can help you change all that and more. 
-        </p>
+            <p class="sect-subtitle">I also know that I can help you change all that and more.</p>
+        </div>
     </section>
     <!-- END: hero section -->
 
@@ -218,7 +220,7 @@
             </div>
             <div class="crazy-about-text">
                 <p class="favourite-text fw-b">My love</p>
-                <p class="favourite-text">This little bundle of cuteness and hilarity </p>
+                <p class="favourite-text">This little bundle of cuteness</p>
             </div>
             <div class="crazy-about-img">
                 <img src="static/img/core-img/baby.jpeg" alt="baby">
