Chang services cta text padding

--- a/about.html
+++ b/about.html
@@ -279,7 +279,7 @@
                 <h3 class="cta-subtitle">
                     The life of your dreams.
                 </h3>
-                <a class="btn-dark-pink services-cta-btn" href="services.html">Work with Mhairi</a>
+                <a class="btn-dark-pink services-cta-btn" href="contact.html">Book in your free discovery call</a>
             </div>
         </div>
     </section>
