--- a/services.html
+++ b/services.html
@@ -277,9 +277,9 @@
                         </ul>
                     </figure>
                 </div>
-                <div class="signature-button about-cta-btn">
+                <!-- <div class="signature-button about-cta-btn">
                     <a class="" href="">I'm ready for this.</a>
-                </div>    
+                </div>     -->
             </div>
             <hr class="half-width-hr d-md-none">
             <div class="coaching-package-item">
@@ -318,9 +318,9 @@
                         </ul>
                     </figure>
                 </div>
-                <div class="signature-button about-cta-btn">
+                <!-- <div class="signature-button about-cta-btn">
                     <a class="" href="">I'm ready for this.</a>
-                </div>    
+                </div>     -->
             </div>
             <hr class="half-width-hr d-md-none">
             <div class="coaching-package-item">
@@ -359,14 +359,30 @@
                         </ul>
                     </figure>
                 </div>
-                <div class="signature-button about-cta-btn">
+                <!-- <div class="signature-button about-cta-btn">
                     <a class="" href="">I'm ready for this.</a>
-                </div>    
+                </div>     -->
             </div>
         </div>
     </section>
 
     <!-- END: signature package -->
+
+    <!-- Parralex services section -->
+    <section class="services-cta">
+        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/core-img/woman-sit-table.jpeg">
+            <div class="services-cta-content">
+                <h2 class="cta-title">
+                    Get ready to start living
+                </h2>
+                <h3 class="cta-subtitle">
+                    The life of your dreams.
+                </h3>
+                <a class="btn-dark-pink" href="contact.html">Book in your free discovery call</a>
+            </div>
+        </div>
+    </section>
+    <!-- END: parralex services section -->
          
     <!-- instagram footer -->
     <section class="contact-footer">
