--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
                 The coaching <span class="logo-font">quiz</span>
             </h2>
             <p id="quizIntroText" class="quiz-content-main normal-text">
-                Personal life coaching is not for everyone. There are some who would benefit from a 
-                life coach, but they aren't ready to make the changes necessary to better their lives. 
-                After the quiz you will have a clearer idea and understanding as to whether a life coach is right for you.
+                Believe it or not, Transformation coaching is not for everyone. There are some 
+                who would really benefit from a coach, but they just aren't ready to make the changes to better their lives. 
+                Take this quick quiz to see if Transformation Coaching is right for you right now. 
             </p>
             <div class="quiz-cta">
                 <a id="quizStart" href="" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
