Compress images on index

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
     <!-- Parralex quote section -->
     <section class="quote-parallax-container">
-        <div class="quote-parallax-window" data-parallax="scroll" data-image-src="static/img/bg-img/out-to-sea.jpeg"></div>
+        <div class="quote-parallax-window" data-parallax="scroll" data-image-src="static/img/bg-img/out-to-sea.jpg"></div>
         <div class="quote">
             <h3 class="sect-subtitle">
                 Words I live by
@@ -227,7 +227,7 @@
 
     <!-- Parralex services section -->
     <section class="services-cta">
-        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/core-img/woman-sit-table.jpeg">
+        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/core-img/woman-sit-table.jpg">
             <div class="services-cta-content">
                 <h2 class="cta-title">
                     Get ready to start living
@@ -268,13 +268,13 @@
                     </div>
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/Mhairi_pics/mhairi_sitting.png" alt="">
+                    <img src="static/img/Mhairi_pics/mhairi_sitting.jpg" alt="">
                 </div>
                 <div class="latest-post-item">
                     <img src="static/img/Mhairi_pics/mhairi_window.jpg" alt="">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/Mhairi_pics/mhairi_sitting.png" alt="">
+                    <img src="static/img/Mhairi_pics/mhairi_sitting.jpg" alt="">
                 </div>
                 <div class="latest-post-item">
                     <img src="static/img/Mhairi_pics/floor.jpg" alt="">
